# syncr

./: .gitignore  Cargo.toml  LICENSE  README.md  build-musl.sh  rustfmt.toml
src/: cache.rs  callbacks.rs  chunk_tracker.rs  chunking.rs  config.rs  conflict.rs  connect.rs  connection.rs  delete.rs  error.rs  lib.rs  logging.rs  main.rs  metadata_utils.rs  node_labels.rs  protocol_utils.rs  serve.rs  state.rs  strategies.rs  sync.rs  sync_impl.rs  types.rs  util.rs
src/conflict/: mod.rs  resolver.rs  rules.rs
src/exclusion/: filters.rs  ignore.rs  mod.rs  patterns.rs
src/metadata/: capabilities.rs  mod.rs  reconciliation.rs  strategy.rs
src/progress/: constants.rs  mod.rs
src/protocol/: error.rs  factory.rs  file_operations.rs  internal_client.rs  internal_server.rs  messages.rs  mod.rs  negotiation.rs  streaming.rs  traits.rs  types.rs  v3.rs  v3_client.rs  v3_server.rs
src/sync_impl/: mod.rs  protocol.rs  state.rs
src/tui/: app.rs  bridge.rs  event.rs  mod.rs  state.rs
src/tui/ui/: layout.rs  mod.rs  theme.rs
src/tui/views/: conflict.rs  dashboard.rs  help.rs  mod.rs  setup.rs  sync_view.rs
src/tui/views/tabs/: conflicts_tab.rs  files_tab.rs  logs_tab.rs  mod.rs  nodes_tab.rs
src/utils/: lock.rs  mod.rs  terminal.rs
src/validation/: cache.rs  config.rs  mod.rs  path.rs
tests/: capability_fallback_test.rs  capability_metadata_test.rs  chunking_test.rs  config_loading_test.rs  config_options_test.rs  conflict_resolution_test.rs  connection_error_test.rs  deadlock_detection_test.rs  error_handling_test.rs  heterogeneous_sync_test.rs  integration_test.rs  library_api_test.rs  precommit_verification_test.rs  protocol_error_handling_test.rs  protocol_list_test.rs  protocol_scenarios_test.rs  real_file_integration_test.rs  signal_handling_test.rs  streaming_collection_integration_tests.rs
