[package]
name = "syncr"
version = "0.1.0"
authors = ["Szilard Hajba <szilu@symbion.hu>"]
edition = "2018"

[features]
default = []
tui = ["ratatui", "crossterm"]

[dependencies]
base64 = "0.22"
bincode = "1.3"
blake3 = "1.8"
clap = "4.5"
futures = "0.3"
glob = "0.3"
hex = "0.4"
redb = "2.6"
rollsum = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termios = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

# TUI dependencies (optional, feature-gated)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }

[dev-dependencies]
tempfile = "3.23"

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
lto = true
incremental = false
